--- a/run_pg_fetch_certificates.sh.tmpl
+++ b/run_pg_fetch_certificates.sh.tmpl
@@ -2,8 +2,8 @@
 
 umask 077
 mkdir -p "$HOME/.pg_services"
-{{ range $instance := (secretJSON "kv" "list" "-format=json" "gke/staging/cloudsql") }}
-{{ $key := (print "gke/staging/cloudsql/" $instance) }}
+{{ range $instance := (secretJSON "kv" "list" "-format=json" "staging/gcp/cloudsql/instances") }}
+{{ $key := (print "staging/gcp/cloudsql/instances/" $instance) }}
 echo '{{ (vault $key).data.client_ca_cert_cert }}' > $HOME/.pg_services/{{ $instance }}-client-cert.pem
 echo '{{ (vault $key).data.client_ca_cert_private_key }}' > $HOME/.pg_services/{{ $instance }}-client-key.pem
 echo '{{ (vault $key).data.server_ca_cert_cert }}' > $HOME/.pg_services/{{ $instance }}-server-ca.pem
