Use environment to construct service names
Also adjust to the moved credentials.

--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -1,6 +1,7 @@
-{{ range $db := (secretJSON "kv" "list" "-format=json" "staging/gcp/cloudsql/databases") }}
-{{ $key := (print "staging/gcp/cloudsql/databases/" $db) }}
-[{{ $db }}]
+{{ range $db := (secretJSON "kv" "list" "-format=json" "cloudsql/databases") }}
+{{ $key := (print "cloudsql/databases/" $db) }}
+{{ $instance := (print "cloudsql/instances/" (vault $key).data.instance) }}
+[{{ (vault $key).data.name }}-{{ (vault $instance).data.environment }}]
 hostaddr={{ (vault $key).data.host }}
 port=5432
 user={{ (vault $key).data.user }}
