MAINT: Add script to generate "favorites" for Postico
You can import new favorites like so:

  $ open ~/.pg_services/quiz-staging.pgfav

This will open the new favorite in Postico, where you should be able
to "connect". Note that you might have to activate "Use TLS Client
Certificate" from the options dialog and select the appropriate `.crt`
and `.key` file for the instance containing the database.

Unfortunately, Postico doesn't support specifying the required client
certificate via its favorites files.

Also see https://eggerapps.at/postico/docs/v1.5.14/favorite-window.html

--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -8,7 +8,7 @@ user={{ (vault $key).data.user }}
 password={{ (vault $key).data.password }}
 dbname={{ (vault $key).data.name }}
 sslmode=verify-ca
-sslcert={{ (env "HOME") }}/.pg_services/{{ (vault $key).data.instance }}-client-cert.pem
-sslkey={{ (env "HOME") }}/.pg_services/{{ (vault $key).data.instance }}-client-key.pem
+sslcert={{ (env "HOME") }}/.pg_services/{{ (vault $key).data.instance }}-client.crt
+sslkey={{ (env "HOME") }}/.pg_services/{{ (vault $key).data.instance }}-client.key
 sslrootcert={{ (env "HOME") }}/.pg_services/{{ (vault $key).data.instance }}-server-ca.pem
 {{ end }}
