--- a/run_pg_fetch_certificates.sh.tmpl
+++ b/run_pg_fetch_certificates.sh.tmpl
@@ -1,10 +1,11 @@
 #!/bin/bash
 
+exit 0
 umask 077
 mkdir -p "$HOME/.pg_services"
 {{ range $instance := (secretJSON "kv" "list" "-format=json" "cloudsql/instances") }}
 {{ $key := (print "cloudsql/instances/" $instance) }}
-echo '{{ (vault $key).data.client_ca_cert_cert }}' > $HOME/.pg_services/{{ $instance }}-client-cert.pem
-echo '{{ (vault $key).data.client_ca_cert_private_key }}' > $HOME/.pg_services/{{ $instance }}-client-key.pem
+echo '{{ (vault $key).data.client_ca_cert_cert }}' > $HOME/.pg_services/{{ $instance }}-client.crt
+echo '{{ (vault $key).data.client_ca_cert_private_key }}' > $HOME/.pg_services/{{ $instance }}-client.key
 echo '{{ (vault $key).data.server_ca_cert_cert }}' > $HOME/.pg_services/{{ $instance }}-server-ca.pem
 {{ end }}
