Connect to the private IP, since the public IP requires VPN anyway
This way folks like me who use explicit VPN routing don't need to
copy&paste a ton of cloudsql public IPs anymore.

--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -2,7 +2,7 @@
 {{ $key := (print "cloudsql/databases/" $db) }}
 {{ $instance := (print "cloudsql/instances/" (vault $key).data.instance) }}
 [{{ (vault $key).data.name }}-{{ (vault $instance).data.environment }}]
-hostaddr={{ (vault $key).data.host }}
+hostaddr={{ (vault $instance).data.private_ip }}
 port=5432
 user={{ (vault $key).data.user }}
 password={{ (vault $key).data.password }}
