BEM-44: Handle comments production special case, this db has no private IP for hysterical raisins

--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -1,8 +1,13 @@
 {{ range $db := (secretJSON "kv" "list" "-format=json" "cloudsql/databases") }}
-{{ $key := (print "cloudsql/databases/" $db) }}
-{{ $instance := (print "cloudsql/instances/" (vault $key).data.instance) }}
-[{{ (vault $key).data.name }}-{{ (vault $instance).data.environment }}]
+{{- $key := (print "cloudsql/databases/" $db) }}
+{{- $instance := (print "cloudsql/instances/" (vault $key).data.instance) }}
+{{- $name := (print (vault $key).data.name "-" (vault $instance).data.environment) }}
+[{{ $name }}]
+{{- if (eq $name "comments-production") }}
+hostaddr=35.246.160.111
+{{- else }}
 hostaddr={{ (vault $instance).data.private_ip }}
+{{- end }}
 port=5432
 user={{ (vault $key).data.user }}
 password={{ (vault $key).data.password }}
