MAINT: Revert back to the previous, perhaps not quite as nice syntax
However, the advantage is that it works this way… :)

Belongs to fb59588a.

--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -1,7 +1,7 @@
 {{ range $db := (secretJSON "kv" "list" "-format=json" "cloudsql/databases") }}
 {{- $key := (print "cloudsql/databases/" $db) }}
 {{- $instance := (print "cloudsql/instances/" (vault $key).data.instance) }}
-[{{ (vault $key).data.name "-" (vault $instance).data.environment }}]
+[{{ (vault $key).data.name }}-{{ (vault $instance).data.environment }}]
 hostaddr={{ (vault $instance).data.private_ip }}
 port=5432
 user={{ (vault $key).data.user }}
