--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -1,6 +1,8 @@
 {{ range $project := list "zeit-interactive" "zeitonline-gke-misc-prod" "zeitonline-main" }}
 {{- $instances := (print "zon/v1/gcp/" $project "/cloudsql/instances/") }}
 {{ range $instance := (secretJSON "kv" "list" "-format=json" $instances) }}
+{{ $instance_keys := (secretJSON "kv" "list" "-format=json" (print $instances $instance)) }}
+{{ if has "databases/" $instance_keys }}
 {{- $databases := (print $instances $instance "/databases/") }}
 {{ range $database := (secretJSON "kv" "list" "-format=json" $databases) }}
 {{- $inst := (print $instances $instance "instance-credentials" ) }}
@@ -15,6 +17,7 @@ sslmode=verify-ca
 sslcert={{ (env "HOME") }}/.pg_services/{{ $project }}-{{ (vault $key).data.instance }}-client.crt
 sslkey={{ (env "HOME") }}/.pg_services/{{ $project }}-{{ (vault $key).data.instance }}-client.key
 sslrootcert={{ (env "HOME") }}/.pg_services/{{ $project }}-{{ (vault $key).data.instance }}-server-ca.pem
+{{ end }}
 {{ end }}
 {{ end }}
 {{ end }}
