remove interactive from pg-service list
don't generate pgservice entries for interactive project

--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -1,4 +1,4 @@
-{{ range $project := list "zeit-interactive" "zeitonline-gke-misc-prod" "zeitonline-main" }}
+{{ range $project := list "zeitonline-gke-misc-prod" "zeitonline-main" }}
 {{- $instances := (print "zon/v1/gcp/" $project "/cloudsql/instances/") }}
 {{ range $instance := (secretJSON "kv" "list" "-format=json" $instances) }}
 {{ $instance_keys := (secretJSON "kv" "list" "-format=json" (print $instances $instance)) }}
