Fetch DNS Names from Vault (belongs to 727215b87016c18fc4dab9bac4412f06097e74b3)
We've added the DNS name to the instance-credentials Secret in Vault so it's also possible
to use DNS names in different GCP projects.

--- a/run_pg_make_postico_favorites.sh.tmpl
+++ b/run_pg_make_postico_favorites.sh.tmpl
@@ -21,7 +21,7 @@ mkdir -p "$HOME/.pg_services"
     <key>nickname</key>
     <string>{{ (vault $key).data.name }} ({{ (vault $inst).data.environment }})</string>
     <key>host</key>
-    <string>{{ (vault $key).data.instance }}-internal.cloudsql.zeitonline-main.gcp.zon.zeit.de</string>
+    <string>{{ (vault $inst).data.private_dns }}</string>
     <key>database</key>
     <string>{{ (vault $key).data.name }}</string>
     <key>user</key>
