--- a/run_pg_fetch_certificates.sh.tmpl
+++ b/run_pg_fetch_certificates.sh.tmpl
@@ -2,10 +2,10 @@
 
 umask 077
 mkdir -p "$HOME/.pg_services"
-{{ range $project := list "zeitonline-main" }}
-{{- $instances := (print "zon/v1/gcp/" $project "/cloudsql/instances/") }}
+{{ range $project := (secretJSON "list" "zon/v1/gcp/") }}
+{{- $instances := (print "zon/v1/gcp/" $project "cloudsql/instances/") }}
 {{ range $instance := (secretJSON "list" $instances) }}
-{{ $base := (print $project "-" (trimSuffix "/" $instance)) }}
+{{ $base := (print (trimSuffix "/" $project) "-" (trimSuffix "/" $instance)) }}
 {{ $key := (print $instances $instance "instance-credentials" ) }}
 {{- $credentials := (secretJSON "get" $key).data }}
 echo '{{ $credentials.client_ca_cert_cert }}' > $HOME/.pg_services/{{ $base }}-client.crt
