style(pg-services): use separate directories for instance certificates

--- a/dot_pg_service.conf.tmpl
+++ b/dot_pg_service.conf.tmpl
@@ -17,10 +17,10 @@ user={{ $db.user }}
 password={{ $db.password }}
 dbname={{ $db.name }}
 sslmode=verify-ca
-{{ $prefix := (print (env "HOME") "/.pg_services/" (trimSuffix "/" $project) "-" $db.instance) -}}
-sslcert={{ $prefix }}-client.crt
-sslkey={{ $prefix }}-client.key
-sslrootcert={{ $prefix }}-server-ca.pem
+{{ $prefix := (print (env "HOME") "/.pg_services/" $project $db.instance) -}}
+sslcert={{ $prefix }}/client.crt
+sslkey={{ $prefix }}/client.key
+sslrootcert={{ $prefix }}/server-ca.pem
 {{  end }}
 {{- end }}
 {{- end }}
