chore(pg-services): add comment that might be helpful later

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,1 +1,6 @@
-secret.command = "{{ .chezmoi.sourceDir }}/vault.sh"
+# a wrapper script is used to extract secrets from Vault
+# so that access errors don't stop the 'chezmoi' commands
+# this way we can loop through all available projects to
+# find database credentials for example
+[secret]
+    command = "{{ .chezmoi.sourceDir }}/vault.sh"
