--- a/run_pg_services_fix_duplicates.awk.tmpl
+++ b/run_pg_services_fix_duplicates.awk.tmpl
@@ -1,67 +1,35 @@
 #!/usr/bin/env bash
 
 set -e
+services=~/.pg_service.conf
 tmpfile=$(mktemp)
 awk '
 
-# 1. Neuer Sektions-Header gefunden
-/^\[.*\]$/ {
-    # Alte Sektion abschließen und ausgeben
-    if (header) {
-        print_section()
-    }
-
-    # Neue Sektion initialisieren
+# 1st pass: count headers
+FNR==NR && /^\[[^]]*\]$/ {
     header = $0
-    body = ""
-    found_suffix = ""  # Variable für die gefundene Zahl/ID
-    
-    # Vorkommen zählen (für Duplikat-Check)
+    line = NR
     seen[header]++
-    next
 }
 
-# 2. Host-Zeile analysieren: Suche nach einer Zahl
-/^[[:space:]]*host=/ {
-    # match() sucht nach dem Muster.
-    # RSTART ist die Startposition, RLENGTH die Länge des Treffers.
-    # [0-9]+ bedeutet: Eine oder mehrere Ziffern.
-    if (match($0, /[0-9]+/)) {
-        found_suffix = substr($0, RSTART, RLENGTH)
-        
-        # OPTIONAL: Falls du z.B. "pg13" statt nur "13" willst, 
-        # ändere oben das Muster in: /[a-z]*[0-9]+/
-    }
-}
-
-# 3. Inhalt sammeln
-{
-    if (header) {
-        body = body $0 "\n"
+# 1st pass: collect suffixes
+FNR==NR && /^host=/ {
+    if (match($0, /-pg[0-9]+-/)) {
+        suffix[line] = substr($0, RSTART+3, RLENGTH-4)
     } else {
-        print
+        suffix[line] = "13"
     }
 }
 
-# 4. Ende der Datei
-END {
-    if (header) {
-        print_section()
+# 2nd pass: inject suffixes
+FNR!=NR && /^\[[^]]*\]$/ {
+    if (seen[$0] > 1) {
+        sub(/\]$/, "-" suffix[FNR] "]")
     }
 }
 
-# Hilfsfunktion zur Ausgabe
-function print_section() {
-    # Nur ändern, wenn Header doppelt UND wir eine Zahl gefunden haben
-    if (seen[header] > 1 && found_suffix != "") {
-        # Hängt "-<Zahl>" an den Namen an.
-        # Aus [db] wird [db-13] (wenn 13 gefunden wurde)
-        sub(/\]$/, "-" found_suffix "]", header)
-    }
-    print header
-    printf "%s", body
-}
+FNR!=NR { print }
 
-' ~/.pg_service.conf > "$tmpfile"
-cp "$tmpfile" ~/.pg_service.conf
+' $services $services > "$tmpfile"
+cp "$tmpfile" $services
 rm "$tmpfile"
